--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@ select {
 }
  /* Utilities */
  
- .display-none {
+.display-none {
    display: none;
- }
+}
   /* Components */
 
  /* btn-primary */
- .btn-primary {
+.btn-primary {
    padding: 12px 16px;
    display: inline-block;
    text-decoration: none;
@@ -82,31 +82,26 @@ select {
    border-radius: 4px;
    background-color: var(--action);
    transition: all 0.3s ease;
- }
+}
  
- .btn-primary:hover {
+.btn-primary:hover {
    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
    transform: translateY(-4px);
- }
+}
   /* header */
- header .mobile-header {
+header .mobile-header {
   padding: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
- header button {
+header button {
    all: unset;
- }
+}
  
-  @media (min-width: 768px) {
-   header {
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-   }
-   
+@media (min-width: 768px) {
+
 
    header nav ul {
        display: flex;
@@ -117,92 +112,109 @@ select {
    header .mobile-header .hamburger-icon {
        display: none;
    }
- }
- /* .logo */
- .logo {
-   height: 50px;
- }
-  /* .logo media query  */
 
- @media (min-width: 768px) {
    .logo {
-       height: 100px;
+     height: 100px;
    }
- }
- /* .mobile-nav */
- .mobile-nav a {
-   text-decoration: none;
-   color: var(--black);
-   display: block;
-  padding: 4px 16px;
- }
- 
- /* .desktop-nav */
- .desktop-nav {
-   display: none;
- }
- 
-  @media (min-width: 768px) {
-   .desktop-nav a {
-       text-decoration: none;
-       font-size: larger;
-       color: var(--black);
-   }
+
   .desktop-nav {
-       display: inline-block;
+     display: inline-block;
    }
- }
 
+  .mobile-nav {
+    display: none;
+  }
 
- /* .hamburger-icon  */
- .hamburger-icon {
-   height: 50px;
- }
+  .hero {
+    padding: 120px 56px;
+  }
 
-
-  /* .hero */
- .hero {
-  display:flex;
-   background-color: var(--brand);
-   padding: 56px 16px;
-   border-radius: 10px;
-   margin: 5px 10px;
- }
- 
- .hero h1 {
-   font-size: 2rem;
-   margin-bottom: 24px;
-   color: var(--base-light);
- }
-  .hero p {
-   font-size: 50px;
-   margin-bottom: 24px;
-   color: var(--base-light);
- }
- 
- .hero .hero-accent {
-   color: var(--action);
- }
-
-@media (min-width: 768px) {
-   .hero {
-       padding: 120px 56px;
-   }
- 
    .hero h1 {
        font-size: 3.5rem;
        max-width: 70%;
    }
- }
 
-  /* .articles-container */
-
- /* .articles-container  */
- @media (min-width: 768px) {
    .articles-container {
      display: flex;
    }
- }
+
+   article {
+      padding: 56px;
+  }
+
+  .contact-form h2 {
+      text-align: center;
+      font-size: 2.5rem;
+  }
+
+  .contact-form form {
+      max-width: 60%;
+      margin: 40px auto;
+  }
+
+  footer {
+       justify-content: center;
+   }
+
+   footer .socials-icon {
+       margin-left: 20px;
+       margin-right: 20px;
+   }
+}
+
+.logo {
+   height: 50px;
+}
+
+.desktop-nav a {
+  text-decoration: none;
+  font-size: larger;
+  color: var(--black);
+}
+
+.mobile-nav a {
+  text-decoration: none;
+  color: var(--black);
+  display: block;
+  padding: 4px 16px;
+}
+ 
+.desktop-nav {
+   display: none;
+}
+
+.mobile-nav {
+   display: none;
+}
+
+.hamburger-icon {
+   height: 50px;
+}
+
+.hero {
+  display:flex;
+  background-color: var(--brand);
+  padding: 56px 16px;
+  border-radius: 10px;
+  margin: 5px 10px;
+}
+ 
+.hero h1 {
+    font-size: 2rem;
+    margin-bottom: 24px;
+    color: var(--base-light);
+}
+
+.hero p {
+    font-size: 50px;
+    margin-bottom: 24px;
+    color: var(--base-light);
+}
+
+.hero .hero-accent {
+    color: var(--action);
+}
+
  article {
    padding: 32px 16px;
    background-color: var(--base-light);
@@ -210,12 +222,7 @@ select {
    margin: 5px 10px;
    transition: all 0.3s ease;
  }
- 
- @media (min-width: 768px) {
-   article {
-      padding: 56px;
-  }
-}
+
  article:hover {
    filter: contrast(150%);
  }
@@ -224,7 +231,6 @@ select {
   display: flex;
   justify-content: flex-start;
 }
- 
 
  article .icon {
    height: 24px;
@@ -249,7 +255,6 @@ select {
   margin: 5px 10px;
 }
 
- 
 .contact-form input,
 .contact-form select {
   display: block;
@@ -262,17 +267,6 @@ select {
   display: block;
   width: 100%;
   padding: 8px;
-}
-@media (min-width: 768px) {
-  .contact-form h2 {
-      text-align: center;
-      font-size: 2.5rem;
-  }
-
-  .contact-form form {
-      max-width: 60%;
-      margin: 40px auto;
-  }
 }
 
 .contact-form label {
@@ -303,14 +297,3 @@ footer {
   width: 40px;
   height: 40px;
 }
-
-@media (min-width: 768px) {
-   footer {
-       justify-content: center;
-   }
- 
-   footer .socials-icon {
-       margin-left: 20px;
-       margin-right: 20px;
-   }
- }
