--- a/style.css
+++ b/style.css
@@ -311,10 +311,6 @@ footer {
 
   footer {
        justify-content: center;
-   }
-
-   footer .socials-icon {
-       margin-left: 20px;
-       margin-right: 20px;
+       gap:32px;
    }
 }
