--- a/myhobbies/style.css
+++ b/myhobbies/style.css
@@ -25,6 +25,35 @@ html {
 *:after {
   box-sizing: inherit;
 }
+/* header */
+
+header .mobile-header {
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo {
+height: 36px; width: 160px
+}
+.desktop-nav a {
+  text-decoration: none;
+  font-size: larger;
+  color: var(--black);
+}
+  header .mobile-header .desktop-nav {
+     display: inline-block;
+   }
+   header nav ul {
+       display: flex;
+       gap: 24px;
+       margin-right: 16px;
+   }
+
+
+
+
+
 /* CSS Frame */
 
 .frame {
@@ -39,3 +68,4 @@ img {
   width: 100%;
   height: 100%;
 }
+
